--- a/flex-box/flex-container/flex-direction/flex-direction.html
+++ b/flex-box/flex-container/flex-direction/flex-direction.html
@@ -8,7 +8,33 @@
 </head>
 
 <body>
+    <h1>flex-direction: row;</h1>
+    <section class="container row">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+    </section>
 
+    <h1>flex-direction: row-reverse;</h1>
+    <section class="container row-reverse">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+    </section>
+
+    <h1>flex-direction: column;</h1>
+    <section class="container column">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+    </section>
+
+    <h1>flex-direction: column-reverse;</h1>
+    <section class="container column-reverse">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+    </section>
 </body>
 
 </html>
