--- a/flex-box/flex-container/flex-flow/flex-flow.html
+++ b/flex-box/flex-container/flex-flow/flex-flow.html
@@ -8,7 +8,26 @@
 </head>
 
 <body>
+    <h1>flex-flow: row nowrap;</h1>
+    <section class="container row-nowrap">
+        <div class="item">TesteDoItem1</div>
+        <div class="item">TesteDoItem2</div>
+        <div class="item">TesteDoItem3</div>
+    </section>
 
+    <h1>flex-flow: row wrap;</h1>
+    <section class="container row-wrap">
+        <div class="item">TesteDoItem1</div>
+        <div class="item">TesteDoItem2</div>
+        <div class="item">TesteDoItem3</div>
+    </section>
+
+    <h1>flex-flow: column-nowrap;</h1>
+    <section class="container column-nowrap">
+        <div class="item">TesteDoItem1</div>
+        <div class="item">TesteDoItem2</div>
+        <div class="item">TesteDoItem3</div>
+    </section>
 </body>
 
 </html>
