--- a/flex-box/rocketseat/index.html
+++ b/flex-box/rocketseat/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <div id="app">
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+        <div class="box red"></div>
+        <div class="box pink"></div>
+        <div class="box blue"></div>
     </div>
 </body>
 
